fixed spacing contact info

--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -38,7 +38,7 @@ section {
   .email-git {
     display: block;
     justify-content: space-between;
-    width: 60vw;
+    width: 80vw;
   }
 
   .info-main{
